@@ -26,15 +26,17 @@ public class CommonBankService {
         this.channelRepository = channelRepository;
     }
 
+    // Bank related methods
     public Bank obtainBankDefault() {
         List<Bank> banks = this.bankRepository.findAll();
         if (!banks.isEmpty()) {
-            return banks.getFirst();
+            return banks.get(0);
         } else {
             throw new RuntimeException("No se encuentra ningun banco");
         }
     }
 
+    // Role related methods
     public List<Role> obtainAllRoles() {
         return this.roleRepository.findAll();
     }
@@ -48,6 +50,7 @@ public class CommonBankService {
         }
     }
 
+    // Channel related methods
     public List<Channel> obtainAllChannels() {
         return this.channelRepository.findAllByOrderByName();
     }
